--- a/Cyber Pet/index.html
+++ b/Cyber Pet/index.html
@@ -15,7 +15,7 @@
         <div id="bigbox">
             <div id="petimgbox">
             <img id="petimg" src="./Media/happydog.png">
-            <img id="petimgg" src="./Media/angrydog.png">
+            <!-- <img id="petimgg" src="./Media/angrydog.png"> -->
             </div>
             <div id="statsbox">
                 <h1 id="name">Name: </h1>
